修改用户权限体系

--- a/src/styles/antv.less
+++ b/src/styles/antv.less
@@ -29,7 +29,32 @@
 
 // 覆盖Ant Design Vue默认样式
 .ant-btn-link {
+  padding: 1px 6px;
   color: rgba(0, 0, 0, 0.65);
+}
+
+.ant-btn-link.primary {
+  color: #1890ff;
+}
+
+.ant-btn-link.primary:hover {
+  color: #096dd9;
+}
+
+.ant-btn-link.danger {
+  color: #ff4d4f;
+}
+
+.ant-btn-link.danger:hover {
+  color: #cf1322;
+}
+
+.ant-btn-link.success {
+  color: #389e0d;
+}
+
+.ant-btn-link.success:hover {
+  color: #237804;
 }
 
 button {
