--- a/src/design/ant/index.less
+++ b/src/design/ant/index.less
@@ -2,6 +2,10 @@
 @import './input.less';
 @import './btn.less';
 
+.ant-col {
+  width: 100%;
+}
+
 .ant-image-preview-root {
   img {
     display: unset;
